exercise4/condor/378.0-error.txt
  File "train.py", line 133
    f.savefig("loss".png")
                         ^
SyntaxError: EOL while scanning string literal
